# poetry-playground

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  GEMINI_TEMPLATE_SUGGESTIONS_EVALUATION.md  GENERATIVE_METHODS.md  INSTALL.md  POETRY_IDEATION_ROADMAP.md  README.md  README.rst  REFACTOR_ISSUES.md  TEMPLATE_ENGINE_DESIGN.md  TODO.md  demo_line_seeds.py  demo_metaphor.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
data/: hate_words.txt
docs/source/: Generative Lexicon (lexigen.py).rst  Poem Text Generation (poemgen.py, jolastic.py).rst  Sampling and Text Processing from Online Libraries (decompser.py).rst  Utilities.rst  Visual Poem (PDF, PNG) Generation (pdf.py).rst  conf.py  index.rst
example_images/: README.md
generativepoetry/: cache.py  causal_poetry.py  cli.py  config.py  corpus_analyzer.py  decomposer.py  document_library.py  finders.py  forms.py  grammatical_templates.py  gutenberg_utils.py  idea_generator.py  jolastic.py  lexicon.py  lexigen.py  line_seeds.py  logger.py  metaphor_generator.py  pdf.py  poem_transformer.py  poemgen.py  pos_vocabulary.py  pronouncing_patch.py  rich_output.py  seed_manager.py  setup_models.py  ship_of_theseus.py  six_degrees.py  system_utils.py  types.py  utils.py  vocabulary.py  word_validator.py
generativepoetry/data/: hate_words.txt
generativepoetry/tui/: app.py  tui.tcss
generativepoetry/tui/screens/: config_form.py  main_menu.py  unified_screen.py
poetryplayground/: cache.py  causal_poetry.py  cli.py  conceptual_cloud.py  config.py  contextual_sampler.py  corpus_analyzer.py  datamuse_api.py  decomposer.py  definitional_finder.py  document_library.py  finders.py  forms.py  grammatical_templates.py  gutenberg_utils.py  idea_generator.py  jolastic.py  lexicon.py  lexigen.py  line_seeds.py  logger.py  metaphor_display.py  metaphor_generator.py  pdf.py  personalized_seeds.py  poem_scaffold.py  poem_template.py  poem_transformer.py  poemgen.py  pos_vocabulary.py  pronouncing_patch.py  quality_scorer.py  rich_console.py  rich_output.py  seed_manager.py  semantic_geodesic.py  setup_models.py  ship_of_theseus.py  six_degrees.py  strategy_engine.py  (+6 more)
poetryplayground/core/: __init__.py  document_library.py  lexicon.py  lexigen.py  pos_vocabulary.py  quality_scorer.py  word_validator.py
poetryplayground/data/: concreteness_ratings.txt  poetry_cliches.json
poetryplayground/strategies/: __init__.py  bridge_two_concepts.py  contextual_sampler.py  generate_poem_scaffold.py
poetryplayground/tui/: app.py  procedures.py  tui.tcss
poetryplayground/tui/screens/: config_form.py  main_menu.py  output_view.py  scaffold_display.py  unified_screen.py
scripts/: create_snapshot_lexicon.py
tests/: AliceinWonderland.txt  Cosmicomics.txt  conftest.py  test_cache.py  test_conceptual_cloud.py  test_config.py  test_contextual_sampler.py  test_corpus_analyzer.py  test_definitional_finder.py  test_deterministic.py  test_document_library.py  test_finders.py  test_forms.py  test_generativepoetry.py  test_grammatical_templates.py  test_improved_markov.py  test_lexigen.py  test_line_seeds.py  test_line_seeds_diversity.py  test_markov.py  test_metaphor_generator.py  test_pdf_structure.py  test_personalized_seeds.py  test_poem_template.py  test_pos_vocabulary.py  test_profiling.py  test_quality_scorer.py  test_rhyme_syllable.py  test_rich_cli.py  test_semantic_geodesic.py  test_ship_of_theseus.py  test_strategy_engine.py  test_template_aware_generator.py  test_template_extractor.py  test_template_library.py  test_tui.py  test_tui_integration.py  test_word_validator.py
tests/data/: snapshot_lexicon.txt
