[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "generativepoetry"
version = "0.3.4"
description = "A library primarily for procedurally generating visual poems"
readme = "README.rst"
requires-python = ">=3.8"
authors = [
    {name = "Corey Bobco", email = "corey.bobco@gmail.com"}
]
license = {text = "MIT"}
keywords = ["poetry", "generative", "art", "nlp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Topic :: Artistic Software",
]

dependencies = [
    "console-menu==0.6.0",
    "gutenbergpy>=0.3.5",
    "beautifulsoup4>=4.9.0",
    # "hunspell>=0.5.5",  # Optional - requires system dependencies
    "inflect==4.1.0",
    "internetarchive==1.8.5",
    "markovify==0.8.0",
    "nltk>=3.8",
    "pdf2image==1.12.1",
    "rdflib==4.2.2",
    "pronouncing>=0.2.0",
    "python-datamuse>=1.3.0",
    "spacy>=2.2.3",
    "reportlab>=3.5.26",
    "wordfreq>=2.2.2",
]

[project.urls]
Homepage = "https://github.com/coreybobco/generativepoetry-py"
Repository = "https://github.com/coreybobco/generativepoetry-py"
Issues = "https://github.com/coreybobco/generativepoetry-py/issues"
Documentation = "https://generativepoetry.readthedocs.io/"

[project.scripts]
generative-poetry-cli = "generativepoetry.cli:main"

[project.optional-dependencies]
spellcheck = [
    "hunspell>=0.5.5",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.10",
    "black>=23.0",
    "isort>=5.12",
    "flake8>=6.0",
    "mypy>=1.0",
    "pre-commit>=3.0",
]
docs = [
    "sphinx>=5.0",
    "sphinx-rtd-theme>=1.2",
    "sphinx-autodoc-typehints>=1.22",
]

[tool.setuptools.packages.find]
include = ["generativepoetry*"]

[tool.setuptools.package-data]
generativepoetry = ["data/hate_words.txt", "data/abbreviations_etc.txt"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-ra -q --strict-markers"

[tool.coverage.run]
source = ["generativepoetry"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
]