[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "generativepoetry"
version = "0.3.4"
description = "A library primarily for procedurally generating visual poems"
readme = "README.rst"
requires-python = ">=3.8"
authors = [
    {name = "Corey Bobco", email = "corey.bobco@gmail.com"}
]
license = {text = "MIT"}
keywords = ["poetry", "generative", "art", "nlp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Topic :: Artistic Software",
]

dependencies = [
    "console-menu==0.6.0",
    "diskcache>=5.6.0",
    "gutenbergpy>=0.3.5",
    "beautifulsoup4>=4.9.0",
    # "hunspell>=0.5.5",  # Optional - requires system dependencies
    "inflect==4.1.0",
    "markovify==0.8.0",
    "nltk>=3.8",
    "pdf2image==1.12.1",
    "pronouncing>=0.2.0",
    "pydantic>=2.0",
    "python-datamuse>=1.3.0",
    "pyyaml>=6.0",
    "rapidfuzz>=3.0.0",
    "rich>=13.7.0",
    "spacy>=2.2.3",
    "textual>=0.47.0",
    "reportlab>=3.5.26",
    "wordfreq>=2.2.2",
]

[project.urls]
Homepage = "https://github.com/coreybobco/generativepoetry-py"
Repository = "https://github.com/coreybobco/generativepoetry-py"
Issues = "https://github.com/coreybobco/generativepoetry-py/issues"
Documentation = "https://generativepoetry.readthedocs.io/"

[project.scripts]
generative-poetry-cli = "generativepoetry.cli:main"
generative-poetry-tui = "generativepoetry.tui.app:run"

[project.optional-dependencies]
spellcheck = [
    "hunspell>=0.5.5",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.10",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "pre-commit>=3.0",
]
docs = [
    "sphinx>=5.0",
    "sphinx-rtd-theme>=1.2",
    "sphinx-autodoc-typehints>=1.22",
]

[tool.setuptools.packages.find]
include = ["generativepoetry*"]

[tool.setuptools.package-data]
generativepoetry = ["data/hate_words.txt", "data/abbreviations_etc.txt", "tui/tui.tcss"]

[tool.ruff]
line-length = 100
target-version = "py38"
extend-exclude = ["texts/"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "DTZ",  # flake8-datetimez
    "SIM",  # flake8-simplify
    "RUF",  # Ruff-specific rules
]
ignore = [
    "E501",  # Line too long (handled by formatter)
    "B008",  # Do not perform function calls in argument defaults (common pattern in Click)
    "DTZ005", # datetime.now() without tz (acceptable for this use case)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Unused imports in __init__.py are often intentional
"tests/**/*.py" = ["B", "SIM"]  # Be more lenient in tests

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = false  # Start lenient, will tighten gradually
check_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
strict_optional = true
show_error_codes = true
pretty = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-ra -q --strict-markers"

[tool.coverage.run]
source = ["generativepoetry"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
]

[tool.generativepoetry]
# API Settings
datamuse_api_max = 50
datamuse_timeout = 10

# Generation Settings
default_num_lines = 10
min_line_words = 5
max_line_words = 9
max_line_length = 35

# Output Settings
output_format = "pdf"  # Options: pdf, png, svg, txt
pdf_orientation = "landscape"  # Options: landscape, portrait
enable_png_generation = true

# spaCy Model Selection
spacy_model = "sm"  # Options: sm (small), md (medium), lg (large)

# CLI Behavior
quiet = false
verbose = false
no_color = false
dry_run = false

# Caching
enable_cache = true

# Performance
max_api_retries = 3
api_retry_delay = 1.0
